<resources>
    <string name="app_name">IRPOF</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_headlines">  Latest\nHeadlines</string>
    <string name="lorem_ipsum">Lorem Ipsum The national single window system has access to over 100 central level approvals and state single window systems of 14 states/uTs with one user Id and password</string>
    <string name="who_we_are">Indian Railway Promotee Officers Federation (IRPOF)</string>
    <string name="mission">Our Mission</string>
    <string name="vision">Our Vision</string>
    <string name="events">Recent Events</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="who_we_are_text">Indian Railways Promotee Officers Federation (IRPOF) Is An Organization Of
        Promotee Officers Having Its Head Quarter At New Delhi. It Functions Through Its Member Associations.
        Zonal Associations Functions Through Divisional Bodies Across All The 69 Divisions Of Indian Railways.
        The Aim Of The Federation Is To Safeguard Interests Of Promotee Officers And Provide Better Career Opportunities
        And Working Conditions. It Works For Development And Promoting Overall Efficiency In The Working Of Railways In The
        Best Interest Of Common People, The Nation And The Railway Men. \n\n IRPOF Has Launched This Site To Keep Its Member Informed About
        The, Latest Activities And Share Views On Topics Of Importance. All The Members Are Requested To Kindly Contribute To Make The
        Site Useful And Meaningful.</string>
    <string name="mission_text">Indian Railways Promotee Officers Federation (IRPOF) Is An Organization Of Promotee Officers Having Its Head Quarter At New Delhi. It Functions Through Its Member Associations. Zonal Associations Functions Through Divisional Bodies Across All The 69 Divisions Of Indian Railways.</string>
    <string name="vision_text">Indian Railways Promotee Officers Federation (IRPOF) Is An Organization Of Promotee Officers Having Its Head Quarter At New Delhi. It Functions Through Its Member Associations. Zonal Associations Functions Through Divisional Bodies Across All The 69 Divisions Of Indian Railways.</string>
    <string name="image_text">Following Are The Images From The Recent Event Held On Friday, 19th January Regarding ECM/AGM.</string>
    <string name="video_text">Following Are The Images From The Recent Event Held On Friday, 19th January Regarding ECM/AGM.</string>
    <string name="event_text">Indian Railways Promotee Officers Federation (IRPOF) Is An Organization Of Promotee Officers Having Its Head Quarter At New Delhi.</string>
    <string name="address">208/A-4, Railway Colony Basant\nLane, Pahar Ganj, Delhi - 110 055</string>
    <string name="number">42622924(DoT), 030-22924 030-\n23140(Rly.)</string>
    <string name="gmail">dummy@railways.com \ndummy2@gmail.com</string>
</resources>