<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/img_viewPager"
                    android:layout_width="wrap_content"
                    android:layout_height="202dp"
                    android:background="@drawable/default_field_photo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                        android:id="@+id/mark_mission_dots_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="9dp"
                        android:layout_margin="2dp"
                        app:dotsColor="#919EAA"
                        app:dotsSize="6dp"
                        app:dotsSpacing="4dp"
                        app:progressMode="true"
                        app:selectedDotColor="#5C6A72" />

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0b4b8f">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#F10B0B"
                    android:paddingStart="7dp"
                    android:paddingEnd="7dp"
                    android:text="@string/latest_headlines"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_pages"
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rl_1"
                android:visibility="visible">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:id="@+id/txt_who"
                    android:textColor="#2563eb"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:text="@string/who_we_are"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_below="@id/txt_who"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/black"
                    android:text="@string/who_we_are_text"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/rl_2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_mission"
                    android:padding="10dp"
                    android:textColor="#2563eb"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:text="@string/mission"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:id="@+id/text_mission"
                    android:layout_below="@id/txt_mission"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/black"
                    android:text="@string/mission_text"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:id="@+id/txt_vision"
                    android:layout_below="@id/text_mission"
                    android:textColor="#2563eb"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:text="@string/vision"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_below="@id/txt_vision"
                    android:textColor="@color/black"
                    android:text="@string/vision_text"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/rl_3">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="#2563eb"
                    android:id="@+id/txt_events"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:text="@string/events"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_events"
                    android:id="@+id/cd_1"
                    android:layout_margin="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="left">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingStart="7dp"
                            android:paddingEnd="7dp"
                            android:text="@string/event_text"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingStart="7dp"
                            android:paddingEnd="7dp"
                            android:text="Published On: 10/02/2024"
                            android:textColor="#EA0909"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="7dp"
                            android:paddingEnd="7dp"
                            android:text="View Details"
                            android:textColor="#214EF3"
                            android:textSize="17sp" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cd_1"
                    android:id="@+id/cd_2"
                    android:layout_margin="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="left">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingStart="7dp"
                            android:paddingEnd="7dp"
                            android:text="Indian Railways Promotee Officers Federation (IRPOF) Is An Organization Of Promotee Officers Having Its Head Quarter At New Delhi."
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingStart="7dp"
                            android:paddingEnd="7dp"
                            android:text="Published On: 10/02/2024"
                            android:textColor="#EA0909"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="7dp"
                            android:paddingEnd="7dp"
                            android:text="View Details"
                            android:textColor="#214EF3"
                            android:textSize="17sp" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cd_2"
                    android:id="@+id/cd_3"
                    android:layout_margin="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="left">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingStart="7dp"
                            android:paddingEnd="7dp"
                            android:text="Indian Railways Promotee Officers Federation (IRPOF) Is An Organization Of Promotee Officers Having Its Head Quarter At New Delhi."
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingStart="7dp"
                            android:paddingEnd="7dp"
                            android:text="Published On: 10/02/2024"
                            android:textColor="#EA0909"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="7dp"
                            android:paddingEnd="7dp"
                            android:text="View Details"
                            android:textColor="#214EF3"
                            android:textSize="17sp" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>



            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/rl_4">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="#2563eb"
                    android:id="@+id/txt_img"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:text="@string/images"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_below="@id/txt_img"
                    android:id="@+id/text_img"
                    android:text="@string/image_text"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/ll_img"
                    android:weightSum="3"
                    android:layout_below="@id/text_img"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:src="@drawable/img_1"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:src="@drawable/img_2"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:gravity="fill"
                        android:layout_weight="1"
                        android:src="@drawable/img_3"/>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_img"
                    android:layout_margin="20dp"
                    android:text="View More"
                    android:background="#F10404"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/rl_5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:id="@+id/txt_video"
                    android:textColor="#2563eb"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:text="@string/videos"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_below="@id/txt_video"
                    android:id="@+id/text_video"
                    android:text="@string/image_text"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/ll_video"
                    android:weightSum="3"
                    android:layout_below="@id/text_video"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:src="@drawable/img_1"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:src="@drawable/img_2"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:gravity="fill"
                        android:layout_weight="1"
                        android:src="@drawable/img_3"/>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_video"
                    android:layout_margin="20dp"
                    android:text="View More"
                    android:background="#F10404"/>




            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</FrameLayout>